[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "image_tiles"
version = "0.1.1"
authors = [
    {name = "Nate Harada", email = "image_tiles@moonshinelabs.ai"},
]
description = "Serve a webpage with images from a folder."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
keywords = ["image", "tiles", "visualize"]
license = {text = "MIT"}
dependencies = [
    "flask==2.2.2",
    "numpy==1.24.1",
    "loguru==0.6.0",
    "imageio==2.24.0",
    "tifffile==2022.10.10",
    "smart_open==6.3.0",
]
[project.optional-dependencies]
aws = [
    "boto3==1.26.54",
    "smart_open[aws]==6.3.0",
]


[project.urls]
Homepage = "https://github.com/moonshinelabs/image_tiles"

[project.scripts]
image_tiles = "image_tiles:main"